# dixp

./: LICENSE  README.md  pyproject.toml
src/dixp/: __init__.py  func.py  main.py
